--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.5.2"
-    compile "io.projectreactor:reactor-core:3.3.0.RELEASE"
-    testCompile "io.projectreactor:reactor-test:3.3.0.RELEASE"
+    implementation "io.projectreactor:reactor-core:3.3.0.RELEASE"
+
+    testImplementation 'org.mockito:mockito-core:3.1.0'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
+    testImplementation "io.projectreactor:reactor-test:3.3.0.RELEASE"
 }
 
 ext {
