--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.1.0'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
     testImplementation "io.projectreactor:reactor-test:3.3.0.RELEASE"
+    testImplementation "com.github.tomakehurst:wiremock-jre8-standalone:2.25.1"
+    testImplementation "org.awaitility:awaitility:3.0.0"
 }
 
 ext {
